fixed stats alignment

--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -746,6 +746,7 @@ li {
 #signUph2 {
   display: inline-block;
 }
-#c {
+.c {
   text-align: center;
+  width: 30.5vw;
 }
